infra/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: child-growth-api-dev

spec:
  stripPrefix:
    prefixes:
      - /api-child-growth
