infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: child-growth-api-dev-deployment
  namespace: child-growth-api-dev
  labels: 
    app: child-growth-api-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: child-growth-api-dev
  template:
    metadata:
      labels: 
        app: child-growth-api-dev
    spec:
      containers:
        - name: child-growth-api
          image: ghcr.io/childgrowthbg/childgrowth-fastapi:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
