infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: child-growth-api-dev-svc
  namespace: child-growth-api-dev
spec:
  selector:
    app: child-growth-api-dev
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
